--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
     <title>Tribute Page</title>
   </head>
   <body>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <div id="main">
       <h1 id="title">Dr. Norman Borlaug</h1>
       <p>The man who saved a billion lives</p>
       <div id="img-div">
-        <img
-          id="image"
-          src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg"
-        />
+        <img id="image" src="image.jpg" />
 
         <figcaption id="img-caption">
           Dr. Norman Borlaug, third from the left, trains biologists in Mexico
